--- a/app/src/main/res/layout/attachment_preview_fragment.xml
+++ b/app/src/main/res/layout/attachment_preview_fragment.xml
@@ -34,19 +34,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/black"
-                android:fillViewport="true">
+                android:scrollbars="none">
 
                 <ImageView
                     android:id="@+id/imageView_preview"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:scaleType="centerCrop"
-                    android:adjustViewBounds="true"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical|center_horizontal"
                     android:background="@color/black"
+                    android:scaleType="centerInside"
                     android:transitionName="@{@string/transition_name_gallery_thumbnail(galleryItemId)}"
                     app:attachmentImage="@{viewModel.attachmentTaken}"
                     tools:src="@drawable/vertical_photo" />
-
             </com.naposystems.pepito.ui.custom.noScrollView.NoScrollView>
 
             <FrameLayout
@@ -81,9 +80,9 @@
             android:id="@+id/imageButton_close"
             android:layout_width="32dp"
             android:layout_height="32dp"
+            android:layout_marginTop="@dimen/normal_margin"
             android:background="@android:color/transparent"
             android:foreground="?attr/actionBarItemBackground"
-            android:layout_marginTop="@dimen/normal_margin"
             android:padding="@dimen/x_small_padding"
             android:scaleType="fitCenter"
             android:tint="@color/white"
@@ -133,8 +132,8 @@
             android:id="@+id/inputPanel"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/small_margin"
             android:layout_marginHorizontal="@dimen/x_small_margin"
+            android:layout_marginBottom="@dimen/small_margin"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/floatingActionButton_send"
             app:layout_constraintStart_toStartOf="parent"
