--- a/app/src/main/res/values-es/enter_pin.xml
+++ b/app/src/main/res/values-es/enter_pin.xml
@@ -7,4 +7,5 @@
     <string name="text_pin_enter">Ingresar PIN</string>
     <string name="text_title_dialog_biometrics">Bloqueo de la aplicación</string>
     <string name="text_description_dialog_biometrics">Desbloquee la aplicación ingresando con el biometrico</string>
+    <string name="text_unallocated_unlock">El dispositivo no tiene asignado un desbloqueo biométrico</string>
 </resources>
