--- a/app/src/main/res/values-fr/enter_pin.xml
+++ b/app/src/main/res/values-fr/enter_pin.xml
@@ -7,4 +7,5 @@
     <string name="text_pin_enter">Entrez le code PIN</string>
     <string name="text_title_dialog_biometrics">Verrouillage d\'application</string>
     <string name="text_description_dialog_biometrics">Déverrouillez l\'application en entrant avec le biométrique</string>
+    <string name="text_unallocated_unlock">Aucun déverrouillage biométrique n\'est attribué à l\'appareil</string>
 </resources>
