--- a/app/src/main/res/values-pt/enter_pin.xml
+++ b/app/src/main/res/values-pt/enter_pin.xml
@@ -7,4 +7,5 @@
     <string name="text_pin_enter">Digite o PIN</string>
     <string name="text_title_dialog_biometrics">Bloqueio de aplicativo</string>
     <string name="text_description_dialog_biometrics">Desbloqueie o aplicativo entrando com o biométrico</string>
+    <string name="text_unallocated_unlock">O dispositivo não possui um desbloqueio biométrico atribuído</string>
 </resources>
