--- a/app/src/main/res/values-de/info_register_questions.xml
+++ b/app/src/main/res/values-de/info_register_questions.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="text_info_register_account">Zu den Registrierungs- / Bearbeitungsinformationen für die Kontowiederherstellung müssen Sie mindestens 3 und höchstens 5 Fragen hinzufügen, die zum Zeitpunkt der Wiederherstellung Ihres Kennworts angezeigt werden</string>
+    <string name="text_info_register_account">In der Aufnahme / Bearbeiten der Kontowiederherstellungsinformationen, müssen Sie mindestens 3 und maximal 5 Fragen hinzufügen, die zu dem Zeitpunkt angezeigt werden Ihr Konto zurückzugewinnen</string>
     <string name="text_title_info">Wichtig</string>
 </resources>
