--- a/app/src/main/res/values-es/send_code.xml
+++ b/app/src/main/res/values-es/send_code.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="text_welcome_napoleon">Bienvenido a Napoleon Secret Chat</string>
-    <string name="text_description_welcome_napoleon">Nuestra prioridad es tu privacidad, si deseas continuar recibirás un código para activar tu registro.</string>
+    <string name="text_welcome_napoleon">Bienvenido a NapoleoN Chat</string>
+    <string name="text_description_welcome_napoleon">Nuestra prioridad es tu PRIVACIDAD. Si deseas continuar recibirás un código para activar tu registro.</string>
     <string name="text_send_register_code">Enviar código de registro</string>
     <string name="text_check_push">Nota: Revisa las notificaciones Push</string>
 </resources>
