--- a/app/src/main/res/values-it/security_settings.xml
+++ b/app/src/main/res/values-it/security_settings.xml
@@ -3,11 +3,11 @@
     <string name="text_general">GENERALI</string>
     <string name="text_default_message_self_destruct_time">Tempo di autodistruzione del messaggio predefinito</string>
     <string name="text_security">SICUREZZA</string>
-    <string name="text_edit_access_pin">Modifica pin di accesso</string>
+    <string name="text_edit_access_pin">Modifica il tuo PIN di accesso</string>
     <string name="text_time_to_request_access_pin">Tempo di PIN di accesso richiesta</string>
-    <string name="text_account_recovery_information">Informazioni sul recupero dell\'account</string>
+    <string name="text_account_recovery_information">Recupero dell\'account</string>
     <string name="text_allow_download_attachments">Consenti download allegati inviati</string>
-    <string name="text_unlock_options">Opzioni di sblocco</string>
+    <string name="text_unlock_options">Scegli il metodo di sblocco preferito</string>
     <string name="text_message_self_destruct_time_not_send">Tempo Destruct e non letti messaggi non riusciti</string>
     <string name="text_conversation">CONVERSAZIONE</string>
 </resources>
