--- a/app/src/main/res/values/access_pin.xml
+++ b/app/src/main/res/values/access_pin.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="text_access_pin">Access Pin</string>
-    <string name="text_confirm_access_pin">Confirm access pin</string>
+    <string name="text_confirm_access_pin">Confirm new access pin</string>
     <string name="text_access_pin_required">The access pin can\'t be empty</string>
     <string name="text_confirm_pin_access_required">You must confirm the access pin</string>
     <string name="text_access_pin_not_match">The access pin does not match</string>
