--- a/app/src/main/res/values/color_scheme.xml
+++ b/app/src/main/res/values/color_scheme.xml
@@ -6,8 +6,8 @@
     <string name="text_theme_purple_bluebonnets" translatable="false">Purple Bluebonnets</string>
     <string name="text_theme_pink_dream" translatable="false">Pink Dream</string>
     <string name="text_theme_clear_sky" translatable="false">Clear Sky</string>
-    <string name="text_theme_light_napoleon" translatable="false">Light Napoleon</string>
-    <string name="text_theme_dark_napoleon" translatable="false">Dark Napoleon</string>
+    <string name="text_theme_light_napoleon" translatable="false">Light NapoleoN</string>
+    <string name="text_theme_dark_napoleon" translatable="false">Dark NapoleoN</string>
     <string name="text_theme_black_gold_alloy" translatable="false">Black Gold Alloy</string>
     <string name="text_theme_cold_ocean" translatable="false">Cold Ocean</string>
     <string name="text_theme_camouflage" translatable="false">Camouflage</string>
