--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -45,7 +45,7 @@
     <color name="color_E8D8AB">#E8D8AB</color>
     <color name="color_808080">#808080</color>
 
-    <!--   Dark Napoleon-->
+    <!--   Dark NapoleoN-->
     <color name="color_383838">#383838</color>
     <color name="color_80383838">#80383838</color>
     <color name="color_505564">#505564</color>
