--- a/app/src/main/res/layout/language_selection_dialog_fragment_item.xml
+++ b/app/src/main/res/layout/language_selection_dialog_fragment_item.xml
@@ -25,13 +25,13 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/imageView_selected"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:layout_gravity="end"
             android:layout_marginTop="@dimen/small_margin"
             android:layout_marginEnd="@dimen/small_margin"
-            android:visibility="gone"
             android:elevation="10dp"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_language_selected"
