--- a/app/src/main/res/values-de/invite_someone.xml
+++ b/app/src/main/res/values-de/invite_someone.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="text_info_invite_someone">Schützen Sie die Privatsphäre Ihrer Freunde.\nLaden Sie sie ein, den NapoleoN Secret Chat zu nutzen.</string>
+    <string name="text_info_invite_someone">Schützen Sie die Privatsphäre Ihrer Freunde.\nLaden Sie sie ein, den NapoleoN Chat zu nutzen.</string>
     <string name="text_share_link">Ich lade Sie ein, diese super App herunterzuladen!\nhttp://bit.ly/NapoleonAndroid</string>
 </resources>
