--- a/app/src/main/res/values-es/access_pin.xml
+++ b/app/src/main/res/values-es/access_pin.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="text_access_pin">Pin de Acceso</string>
-    <string name="text_confirm_access_pin">Confirmar pin de acceso</string>
+    <string name="text_confirm_access_pin">Confirmar nuevo pin de acceso</string>
     <string name="text_access_pin_required">El pin de acceso no puede estar vacío</string>
     <string name="text_confirm_pin_access_required">Debes confirmar el pin de acceso</string>
     <string name="text_access_pin_not_match">El pin de acceso no coincide</string>
