--- a/app/src/main/res/values-es/security_settings.xml
+++ b/app/src/main/res/values-es/security_settings.xml
@@ -3,11 +3,11 @@
     <string name="text_general">GENERAL</string>
     <string name="text_default_message_self_destruct_time">Tiempo de autodestrucción de mensajes por defecto</string>
     <string name="text_security">SEGURIDAD</string>
-    <string name="text_edit_access_pin">Editar pin de acceso</string>
+    <string name="text_edit_access_pin">Edita tu pin de acceso</string>
     <string name="text_time_to_request_access_pin">Tiempo para solicitud de pin de acceso</string>
-    <string name="text_account_recovery_information">Información recuperación de cuenta</string>
+    <string name="text_account_recovery_information">Recuperación de cuenta</string>
     <string name="text_allow_download_attachments">Permitir descargar adjuntos enviados</string>
-    <string name="text_unlock_options">Opciones de desbloqueo</string>
+    <string name="text_unlock_options">Elije tu método de desbloqueo favorito</string>
     <string name="text_message_self_destruct_time_not_send">Tiempo de autodestrucción de mensajes fallidos y no leídos</string>
     <string name="text_conversation">CONVERSACIÓN</string>
 </resources>
