--- a/app/src/main/res/values-fr/self_destruct_time.xml
+++ b/app/src/main/res/values-fr/self_destruct_time.xml
@@ -7,7 +7,7 @@
     <string name="text_every_one_hour">1 heure</string>
     <string name="text_every_six_hours">6 heures</string>
     <string name="text_every_twenty_four_hours">24 heures</string>
-    <string name="text_info_message_self_destruction">Les messages envoyés seront supprimés après l\'heure sélectionnée.</string>
+    <string name="text_info_message_self_destruction">Les messages envoyés seront supprimés après l\'heure sélectionnée, une fois qu\'ils ont été vus ou entendus.</string>
     <string name="text_every_seven_days">7 días</string>
     <string name="text_every_five_seconds">5 secondes</string>
     <string name="text_every_fifteen_seconds">15 secondes</string>
