--- a/app/src/main/res/values-pt/info_register_questions.xml
+++ b/app/src/main/res/values-pt/info_register_questions.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="text_info_register_account">Para o registrador / editar as informações de recuperação da conta, você deve adicionar no mínimo 3 e no máximo 5 perguntas, que serão exibidas no momento da recuperação de sua senha</string>
+    <string name="text_info_register_account">Na conta de informações de recuperação de gravação / edição, você deve adicionar um mínimo de 3 e um máximo de 5 perguntas, que será mostrado no momento de recuperar a sua conta</string>
     <string name="text_title_info">Importante</string>
 </resources>
