--- a/app/src/main/res/values-pt/security_settings.xml
+++ b/app/src/main/res/values-pt/security_settings.xml
@@ -3,11 +3,11 @@
     <string name="text_general">GERAL</string>
     <string name="text_default_message_self_destruct_time">Tempo de autodestruição da mensagem padrão</string>
     <string name="text_security">SEGURANÇA</string>
-    <string name="text_edit_access_pin">Editar pino de acesso</string>
+    <string name="text_edit_access_pin">Editar o seu acesso PIN</string>
     <string name="text_time_to_request_access_pin">Tempo para solicitar acesso pin</string>
-    <string name="text_account_recovery_information">Informações de recuperação de conta</string>
+    <string name="text_account_recovery_information">Recuperação de conta</string>
     <string name="text_allow_download_attachments">Permitir anexos de download enviados</string>
-    <string name="text_unlock_options">Opções de desbloqueio</string>
+    <string name="text_unlock_options">Escolha o seu método de desbloqueio favorito</string>
     <string name="text_message_self_destruct_time_not_send">Mensagens de tempo Destruct e não lidas falhou</string>
     <string name="text_conversation">CONVERSAÇÃO</string>
 </resources>
