--- a/app/src/main/res/values-pt/self_destruct_time.xml
+++ b/app/src/main/res/values-pt/self_destruct_time.xml
@@ -7,7 +7,7 @@
     <string name="text_every_one_hour">1 hora</string>
     <string name="text_every_six_hours">6 horas</string>
     <string name="text_every_twenty_four_hours">24 horas</string>
-    <string name="text_info_message_self_destruction">As mensagens enviadas serão apagados após o tempo selecionado.</string>
+    <string name="text_info_message_self_destruction">As mensagens enviadas serão apagados depois de o tempo seleccionado, depois de terem sido visto ou ouvido.</string>
     <string name="text_every_seven_days">7 días</string>
     <string name="text_every_five_seconds">5 segundos</string>
     <string name="text_every_fifteen_seconds">15 segundos</string>
