--- a/app/src/main/res/values/general.xml
+++ b/app/src/main/res/values/general.xml
@@ -10,7 +10,7 @@
     <string name="nickname_configuration" translatable="false">abcdefghijklmnopqrstuvwxyz0123456789._</string>
     <string name="only_numbers" translatable="false">0123456789</string>
     <string name="only_letters" translatable="false">ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz</string>
-    <string name="text_napoleon_secret_chat" translatable="false">NapoleoN Secret Chat</string>
+    <string name="text_napoleon_secret_chat" translatable="false">NapoleoN Chat</string>
     <string name="text_duration_and_size" translatable="false">%1$s - %2$s</string>
     <string name="transition_name_gallery_thumbnail" translatable="false">gallery_item_thumbnail_%1$d</string>
     <string name="com.crashlytics.useFirebaseAppId" tools:ignore="ExtraTranslation">true</string>
@@ -81,7 +81,7 @@
     <string name="text_confirm">Confirm</string>
     <string name="text_hang_up_call">Reject</string>
     <string name="text_answer_call">Answer</string>
-    <string name="text_update_title">A new version of Napoleon is available</string>
+    <string name="text_update_title">A new version of NapoleoN is available</string>
     <string name="text_update_message">Version %1$s is now available on the Play Store</string>
     <string name="text_update">Update</string>
     <string name="text_explanation_camera_to_receive_calls">NapoleoN needs access to the camera and microphone to make and receive calls</string>
