--- a/app/src/main/res/layout/access_pin_fragment.xml
+++ b/app/src/main/res/layout/access_pin_fragment.xml
@@ -55,7 +55,6 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/small_margin"
-                        android:hint="@string/text_access_pin"
                         android:nextFocusDown="@id/text_input_layout_confirm_access_pin"
                         app:errorEnabled="true"
                         app:layout_constraintBottom_toTopOf="@+id/text_input_layout_confirm_access_pin"
@@ -69,7 +68,9 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:digits="@string/only_numbers"
+                            android:textColor="?attr/attrTextColorConversationInputPanel"
                             android:inputType="numberPassword"
+                            android:hint="@string/text_access_pin"
                             android:lines="1"
                             android:maxLength="4"
                             android:maxLines="1"
@@ -84,7 +85,6 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/small_margin"
-                        android:hint="@string/text_confirm_access_pin"
                         app:errorEnabled="true"
                         app:layout_constraintBottom_toTopOf="@+id/viewSwitcher"
                         app:layout_constraintEnd_toStartOf="@+id/guideline2"
@@ -96,6 +96,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:digits="@string/only_numbers"
+                            android:textColor="?attr/attrTextColorConversationInputPanel"
+                            android:hint="@string/text_confirm_access_pin"
                             android:imeOptions="actionDone"
                             android:inputType="numberPassword"
                             android:lines="1"
