--- a/app/src/main/res/layout/validate_nickname_fragment.xml
+++ b/app/src/main/res/layout/validate_nickname_fragment.xml
@@ -56,7 +56,6 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/normal_margin"
                         android:layout_marginBottom="@dimen/small_margin"
-                        android:hint="@string/text_nickname_with_asterisk"
                         android:nextFocusDown="@id/text_input_layout_display_name"
                         app:errorEnabled="true"
                         app:layout_constraintBottom_toTopOf="@+id/text_input_layout_display_name"
@@ -71,6 +70,8 @@
                             android:layout_height="wrap_content"
                             android:digits="@string/nickname_configuration"
                             android:inputType="text"
+                            android:hint="@string/text_nickname_with_asterisk"
+                            android:textColor="?attr/attrTextColorConversationInputPanel"
                             android:lines="1"
                             android:maxLength="@dimen/max_length_nickname"
                             android:maxLines="1"
@@ -85,7 +86,6 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/small_margin"
-                        android:hint="@string/text_display_name"
                         app:errorEnabled="true"
                         app:layout_constraintBottom_toTopOf="@+id/textView_terms_info"
                         app:layout_constraintEnd_toStartOf="@+id/guideline2"
@@ -98,7 +98,9 @@
                             android:layout_height="wrap_content"
                             android:digits="@string/only_letters"
                             android:inputType="textCapWords"
+                            android:hint="@string/text_display_name"
                             android:lines="1"
+                            android:textColor="?attr/attrTextColorConversationInputPanel"
                             android:maxLength="@dimen/max_length_display_name"
                             android:maxLines="1"
                             android:singleLine="true"
