--- a/app/src/main/res/layout/attachment_audio_fragment.xml
+++ b/app/src/main/res/layout/attachment_audio_fragment.xml
@@ -40,7 +40,7 @@
             android:layout_margin="16dp"
             app:borderWidth="0dp"
             app:srcCompat="@drawable/ic_send_black"
-            app:tint="@color/fabIconColor"
+            app:tint="?attr/attrFabIconColor"
             android:visibility="invisible"/>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
