--- a/app/src/main/res/layout/contact_profile_fragment.xml
+++ b/app/src/main/res/layout/contact_profile_fragment.xml
@@ -134,6 +134,8 @@
                         android:maxLength="@dimen/max_length_display_name"
                         android:padding="0dp"
                         android:singleLine="true"
+                        android:textColor="?attr/attrColorButtonTint"
+                        android:textColorHint="?attr/attrTextColorHint"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="@+id/textView_name"
                         app:layout_constraintStart_toStartOf="@+id/textView_name"
@@ -189,6 +191,7 @@
                         android:maxLength="@dimen/max_length_nickname"
                         android:padding="0dp"
                         android:singleLine="true"
+                        android:textColor="?attr/attrColorButtonTint"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="@+id/textView_nickname"
                         app:layout_constraintStart_toStartOf="@+id/textView_nickname"
