--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -56,6 +56,7 @@
 
     <!--//Background-->
     <attr name="attrBackgroundColorPrimary" format="reference" />
+    <attr name="attrBackgroundColorSecondary" format="reference" />
     <attr name="attrBackgroundColorPrimary50" format="reference" />
     <attr name="attrBackgroundSectionColor" format="reference" />
     <attr name="attrBackgroundSectionOtherColor" format="reference" />
